claude生成的代码

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-  <title>My jsPsych Experiment</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>阅读流畅性实验</title>
+  <link rel="icon" href="/favicon.ico">
+  <!-- CSS由main.js导入，不需要在这里引用 -->
 </head>
 <body>
-  <div id="jspsych-target"></div>
-  <script src="experiment.js" type="module"></script>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
