--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>认知能力评估平台</title>
+  <title>学习力测验平台</title>
   <link rel="icon" href="/favicon.ico">
   <!-- CSS由main.js导入，不需要在这里引用 -->
 </head>
